# solcast-api-csharp-sdk

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile
.github/workflows/: deploy-docs.yml
aggregation/: index.html
aggregations/: index.html
docs/: aggregation.md  forecast.md  historic.md  index.md  live.md  tmy.md
forecast/: index.html
historic/: index.html
live/: index.html
notebooks/1.1 Getting Data - Historic Solar Radiation/: index.html
pv_power_sites/: index.html
pvpowersite/: index.html
src/Solcast/Clients/: AggregationClient.cs  BaseClient.cs  ForecastClient.cs  HistoricClient.cs  LiveClient.cs  PvPowerSiteClient.cs  TmyClient.cs
src/Solcast/Models/Responses/: BasicPvPowerResource.cs  CreatePvPowerResource.cs  EstimateKimberLossFraction.cs  EstimateKimberLossFractionResponse.cs  EstimatedActualsDataResponse.cs  ForecastAggregationResponse.cs  ForecastsDataResponse.cs  GetForecastHsuLosses.cs  GetForecastKimberLosses.cs  GetHistoricHsuLosses.cs  GetHistoricKimberLosses.cs  GetHorizonAngle.cs  GetLiveHsuLosses.cs  GetLiveKimberLosses.cs  GetPremiumPowerResource.cs  GetPremiumWindPowerForecastData.cs  GetPvPowerResource.cs  GetTerrainElevation.cs  HistoricForecastPvPowerResponse.cs  HistoricForecastRadiationAndWeatherResponse.cs  HistoricPvPowerResponse.cs  (+18 more)
src/Solcast/Utilities/: SolcastUrls.cs
tests/Solcast.Tests/: AggregationClientTests.cs  ForecastClientTests.cs  HistoricClientTests.cs  LiveClientTests.cs  PvPowerSiteClientTests.cs  TmyClientTests.cs
tmy/: index.html
